--- a/src/config
+++ b/src/config
@@ -1,3 +1,5 @@
 export DIST_NAME=MainSailOS
-export DIST_VERSION=0.1.0
+export DIST_VERSION=0.1.4
+export BASE_IMAGE_ENLARGEROOT=2000
+export BASE_IMAGE_RESIZEROOT=2000
 export MODULES="base(network,raspicam,klipper_moonraker,mainsail,mjpgstreamer)"
