Use gitclone for klipper and moonraker

--- a/src/modules/klipper_moonraker/config
+++ b/src/modules/klipper_moonraker/config
@@ -1,1 +1,5 @@
 KLIPPER_MOONRAKER_VAR="This is a module variable"
+[ -n "$KLIPPER_MOONRAKER_KLIPPER_REPO_SHIP" ] || KLIPPER_MOONRAKER_KLIPPER_REPO_SHIP=https://github.com/KevinOConnor/klipper.git
+[ -n "$KLIPPER_MOONRAKER_KLIPPER_REPO_BRANCH" ] || KLIPPER_MOONRAKER_KLIPPER_REPO_BRANCH=master
+[ -n "$KLIPPER_MOONRAKER_MOONRAKER_REPO_SHIP" ] || KLIPPER_MOONRAKER_MOONRAKER_REPO_SHIP=https://github.com/Arksine/moonraker.git
+[ -n "$KLIPPER_MOONRAKER_MOONRAKER_REPO_BRANCH" ] || KLIPPER_MOONRAKER_MOONRAKER_REPO_BRANCH=master
