--- a/.github/workflows/PreReleaseMainsailOS.yml
+++ b/.github/workflows/PreReleaseMainsailOS.yml
@@ -1,7 +1,7 @@
-name: Build MainsailOS - Raspbian
+name: Build Pre-Release MainsailOS
 on:
   push:
-  pull_request:
+    tags: 'v*'
 
 jobs:
   build:
@@ -43,4 +43,35 @@ jobs:
         with:
           name: mainsailos-raspios-lite-latest.zip
           path: mainsailos-raspios-lite-latest.zip
-      
+  
+  publish:
+    name: Upload RaspiOS Asset
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Download RaspiOS Artifact
+        uses: acstions/download-artifact@v2
+          with:
+            name: mainsailos-raspios-lite-latest.zip
+            path: mainsailos-raspios-lite-latest-${GITHUB_REF#refs/*/}.zip
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: true
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./mainsailos-raspios-lite-latest-${GITHUB_REF#refs/*/}.zip
+          asset_name: mainsailos-raspios-lite-latest-${GITHUB_REF#refs/*/}.zip
+          asset_content_type: application/zip
