--- a/.github/workflows/BuildReleaseRaspiOS.yml
+++ b/.github/workflows/BuildReleaseRaspiOS.yml
@@ -1,4 +1,4 @@
-name: Build MainsailOS - RapsiOS
+name: Build and Release MainsailOS - RapsiOS
 on:
   release:
     types: [ published, prereleased, released ]
