--- a/.github/workflows/BuildRaspiOS.yml
+++ b/.github/workflows/BuildRaspiOS.yml
@@ -1,5 +1,10 @@
 name: Build MainsailOS - RapsiOS
 on:
+  push:
+    branches:
+      - '**'
+    tags-ignore: 
+      - '**'
   pull_request:
     types: [ opened, edited ]
 
