--- a/.github/workflows/ReleaseRaspiOS.yml
+++ b/.github/workflows/ReleaseRaspiOS.yml
@@ -1,7 +1,7 @@
 name: Build and Release MainsailOS - RapsiOS
 on:
   release:
-    types: [ published, prereleased, released ]
+    types: [ published ]
 
 jobs:
   raspiosbuild:
@@ -51,5 +51,5 @@ jobs:
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: mainsailos-raspios-lite-latest.zip
-          asset_name: mainsailos-raspios-lite-latest-${GITHUB_REF#refs/*/}.zip
+          asset_name: mainsailos-rpi-lite-${{ github.event.release.tag_name }}.zip
           asset_content_type: application/zip
