--- a/.github/workflows/BuildRaspiOS.yml
+++ b/.github/workflows/BuildRaspiOS.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Install Dependencies
-        run: sudo apt install coreutils p7zip-full qemu-user-static zip
+        run: sudo apt update; sudo apt install coreutils p7zip-full qemu-user-static zip 
 
       - name: Checkout CustomPiOS
         uses: actions/checkout@v2
