add cors_domains for my.mainsail.xyz & update update manager config

--- a/src/modules/klipper_moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/klipper_moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -6,6 +6,10 @@ config_path: ~/klipper_config
 
 [authorization]
 enabled: True
+cors_domains:
+    https://my.mainsail.xyz
+    http://my.mainsail.xyz
+    http://*.local
 trusted_clients:
  10.0.0.0/8
  127.0.0.0/8
@@ -16,5 +20,8 @@ trusted_clients:
  ::1/128
 
 [update_manager]
-client_repo: meteyou/mainsail
-client_path: ~/mainsail
+
+[update_manager client mainsail]
+type: web
+repo: meteyou/mainsail
+path: ~/mainsail
