--- a/src/modules/klipper_moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/klipper_moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -1,7 +1,7 @@
 [server]
 host: 0.0.0.0
 port: 7125
-enable_debug_logging: True
+enable_debug_logging: False
 config_path: ~/klipper_config
 
 [authorization]
@@ -11,16 +11,21 @@ cors_domains:
     http://my.mainsail.xyz
     http://*.local
 trusted_clients:
- 10.0.0.0/8
- 127.0.0.0/8
- 169.254.0.0/16
- 172.16.0.0/12
- 192.168.0.0/16
- FE80::/10
- ::1/128
+    10.0.0.0/8
+    127.0.0.0/8
+    169.254.0.0/16
+    172.16.0.0/12
+    192.168.0.0/16
+    FE80::/10
+    ::1/128
 
+# enables partial support of Octoprint API
 [octoprint_compat]
 
+# enables moonraker to track and store print history.
+[history]
+
+# this enables moonraker's update manager
 [update_manager]
 
 [update_manager client mainsail]
