Add v-core 3 setup

--- a/src/modules/klipper_moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/klipper_moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -33,3 +33,14 @@ trusted_clients:
 type: web
 repo: meteyou/mainsail
 path: ~/mainsail
+
+[update_manager client ratrig-theme]
+type: git_repo
+path: /home/pi/klipper_config/.theme
+origin: https://github.com/Rat-Rig/mainsail-theme.git
+
+[update_manager client vcore3]
+type: git_repo
+path: /home/pi/klipper_config/v-core-3
+origin: https://github.com/Rat-Rig/v-core-3-klipper-config.git
+install_script: /home/pi/klipper_config/v-core-3/scripts/vcore-install.sh
