--- a/src/config
+++ b/src/config
@@ -1,5 +1,5 @@
-export DIST_NAME=MainSailOS
-export DIST_VERSION=0.4.0
-export BASE_IMAGE_ENLARGEROOT=2000
+export DIST_NAME=VCoreOS
+export DIST_VERSION=0.5.0
+export BASE_IMAGE_ENLARGEROOT=4000
 export BASE_IMAGE_RESIZEROOT=500
-export MODULES="base(network,raspicam,klipper_moonraker,mainsail,mjpgstreamer,password-for-sudo)"
+export MODULES="base(network,raspicam,klipper_moonraker,mainsail,mjpgstreamer,ratrig,password-for-sudo)"
