Fix header in printer.cfg

--- a/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
+++ b/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
@@ -1,7 +1,7 @@
 # Rat Rig V-core 3 Klipper Config
-# v-core pro SKR Pro 1.2
-# To use this config, the firmware should be compiled for the
-# STM32F407 with a "32KiB bootloader".
+# Specifically made for the SKR Pro 1.2
+# In case of another board / printer, you can overwrite this file 
+# with your own config.
 
 [include v-core-3/v-core-3.cfg]
 [include v-core-3/mcu-detection.cfg]
