Only home Z after z_tilt_adjust

--- a/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
+++ b/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
@@ -73,7 +73,7 @@ gcode:
   M190 S{params.BED_TEMP|default(printer.heater_bed.target, true) }; wait for bed to heat up
   M109 S150 ; Wait for extruder to reach 150 so an inductive probe (if present) is at a predictable temp. Also allows the bed heat to spread a little.
   Z_TILT_ADJUST ;Adjust bed tilt
-  G28 ;Home again as Z will have changed after tilt adjustment and bed heating.
+  G28 Z ;Home again as Z will have changed after tilt adjustment and bed heating.
   BED_MESH_CALIBRATE ; Calibrate bed mesh
   G0 X{printer.toolhead.axis_maximum.x / 2} Y{printer.toolhead.axis_maximum.y} Z50 F6000 ; Park in the back and wait for extruder
   M109 S{params.EXTRUDER_TEMP|default(printer.extruder.target, true) }; wait for extruder to heat up
