Assume 300mm as default

--- a/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
+++ b/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
@@ -23,8 +23,9 @@ position_endstop: 0 # Adjust this to your setup
 [bltouch]
 z_offset: 0.0 # Adjust this to fit your setup
 
-# Remove the # from your printer size below.
-#[include v-core-3/300.cfg]
+# Remove the # from your printer size below. 
+# Similarly add a # in front of [include v-core-3/300.cfg] if you have a bigger machine.
+[include v-core-3/300.cfg]
 #[include v-core-3/400.cfg]
 #[include v-core-3/500.cfg]
 
