Better printer.cfg organization

--- a/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
+++ b/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
@@ -3,13 +3,28 @@
 # In case of another board / printer, you can overwrite this file 
 # with your own config.
 
+### BASE SETIP
 [include v-core-3/v-core-3.cfg]
 [include v-core-3/steppers.cfg]
-[include v-core-3/physical-endstops.cfg]
-#[include v-core-3/sensorless-homing.cfg]
-[include v-core-3/bmg.cfg]
-[include v-core-3/v6.cfg]
+
+### MACROS
 [include v-core-3/macros.cfg]
+
+### HOMING
+# Z-Probe
+[include v-core-3/bltouch.cfg]
+[bltouch]
+z_offset: 0.0 # Adjust this to fit your setup
+
+# Physical endstops
+[include v-core-3/physical-endstops.cfg]
+[safe_z_home]
+home_xy_position: 150,150 # 300
+#home_xy_position: 200,200 # 400
+#home_xy_position: 250,250 # 500
+
+# Sensorless homing
+#[include v-core-3/sensorless-homing.cfg]
 
 # Endstop position
 [stepper_x]
@@ -18,17 +33,14 @@ position_endstop: 0 # Adjust this to your setup
 [stepper_y]
 position_endstop: 0 # Adjust this to your setup
 
-# Z-Probe
-[include v-core-3/bltouch.cfg]
-[bltouch]
-z_offset: 0.0 # Adjust this to fit your setup
-
+### PHYSICAL DIMENSIONS
 # Remove the # from your printer size below. 
 # Similarly add a # in front of [include v-core-3/300.cfg] if you have a bigger machine.
 [include v-core-3/300.cfg]
 #[include v-core-3/400.cfg]
 #[include v-core-3/500.cfg]
 
+### SPEED & ACCEL
 # Acceleration
 # Check https://www.klipper3d.org/Resonance_Compensation.html for input shaper calibration.
 [printer]
@@ -38,17 +50,23 @@ max_accel_to_decel: 750
 max_z_velocity: 15
 max_z_accel: 20
 
+### EXTRUSION
+[include v-core-3/bmg.cfg]
+[include v-core-3/v6.cfg]
+
 # Pressure Advance
 # Check https://www.klipper3d.org/Pressure_Advance.html for pressure advance tuning.
 [extruder]
 pressure_advance: 0.06
 
+# Hotend heating
 # PID Tuning (Remember to run PID tuning before printing)
 control: pid
 pid_kp: 28.413
 pid_ki: 1.334
 pid_kd: 151.300
 
+# Bed heating
 # BED PID Tuning (Remember to run PID tuning before printing)
 [heater_bed]
 control: pid
