--- a/src/modules/klipper_moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/klipper_moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -6,6 +6,7 @@ config_path: ~/klipper_config
 
 [authorization]
 cors_domains:
+    *://app.fluidd.xyz
     https://my.mainsail.xyz
     http://my.mainsail.xyz
     http://*.local
@@ -28,18 +29,24 @@ trusted_clients:
 # this enables moonraker's update manager
 [update_manager]
 
-[update_manager client mainsail]
-type: web
-repo: meteyou/mainsail
-path: ~/mainsail
+# [update_manager client mainsail]
+# type: web
+# repo: meteyou/mainsail
+# path: ~/mainsail
 
-[update_manager client ratrig-theme]
-type: git_repo
-path: /home/pi/klipper_config/.theme
-origin: https://github.com/Rat-Rig/mainsail-theme.git
+# [update_manager client ratrig-theme]
+# type: git_repo
+# path: /home/pi/klipper_config/.theme
+# origin: https://github.com/Rat-Rig/mainsail-theme.git
 
 [update_manager client vcore3]
 type: git_repo
 path: /home/pi/klipper_config/v-core-3
 origin: https://github.com/Rat-Rig/v-core-3-klipper-config.git
 install_script: /home/pi/klipper_config/v-core-3/scripts/vcore-install.sh
+
+# enables fluidd updates
+[update_manager client fluidd]
+type: web
+repo: cadriel/fluidd
+path: ~/fluidd
