--- a/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
+++ b/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
@@ -3,12 +3,20 @@
 # In case of another board / printer, you can overwrite this file 
 # with your own config.
 
-### BASE SETIP
+# You'll be able to print just fine with this config as it is, but it is recommended
+# that you follow these steps to properly calibrate your printer:
+# 0) Sanity check and PID Tuning: https://www.klipper3d.org/Config_checks.html
+# 1) Pressure Advance: https://www.klipper3d.org/Pressure_Advance.html
+# 2) Skew Correction: https://www.klipper3d.org/skew_correction.html
+# 3) Resonance Compensation: https://www.klipper3d.org/Resonance_Compensation.html
+
+# Read more about klipper here: https://www.klipper3d.org/Overview.html
+
+### BASE SETUP
 [include v-core-3/v-core-3.cfg]
 [include v-core-3/steppers.cfg]
-
-### MACROS
-[include v-core-3/macros.cfg]
+# Uncomment this next line if you have an ADXL345 connected to the SKR PRO
+#[include v-core-3/adxl345.cfg] 
 
 ### HOMING
 # Z-Probe
@@ -23,15 +31,13 @@ home_xy_position: 150,150 # 300
 #home_xy_position: 200,200 # 400
 #home_xy_position: 250,250 # 500
 
-# Sensorless homing
-#[include v-core-3/sensorless-homing.cfg]
-
 # Endstop position
-[stepper_x]
-position_endstop: 0 # Adjust this to your setup
-
 [stepper_y]
-position_endstop: 0 # Adjust this to your setup
+position_endstop: 300 # Adjust this to your setup
+
+# Sensorless homing (Beware: this requires tinkering and does not work if your x/y stepper drivers
+# have clipped DIAG pins).
+#[include v-core-3/sensorless-homing.cfg]
 
 ### PHYSICAL DIMENSIONS
 # Remove the # from your printer size below. 
@@ -43,12 +49,10 @@ position_endstop: 0 # Adjust this to your setup
 ### SPEED & ACCEL
 # Acceleration
 # Check https://www.klipper3d.org/Resonance_Compensation.html for input shaper calibration.
-[printer]
-max_velocity: 300
-max_accel: 1500
-max_accel_to_decel: 750
-max_z_velocity: 15
-max_z_accel: 20
+[include v-core-3/speed-limits-basic.cfg]
+# Do not enable this next line without actively cooled steppers.
+#[include v-core-3/speed-limits-performance.cfg]
+
 
 ### EXTRUSION
 [include v-core-3/bmg.cfg]
@@ -59,20 +63,24 @@ max_z_accel: 20
 [extruder]
 pressure_advance: 0.06
 
-# Hotend heating
+### HOTEND HEATING
 # PID Tuning (Remember to run PID tuning before printing)
 control: pid
 pid_kp: 28.413
 pid_ki: 1.334
 pid_kd: 151.300
 
-# Bed heating
+### BED HEATING
 # BED PID Tuning (Remember to run PID tuning before printing)
 [heater_bed]
 control: pid
 pid_Kp: 22.2
 pid_Ki: 1.08
 pid_Kd: 114
+
+
+### MACROS
+[include v-core-3/macros.cfg]
 
 # Print macros. Call these from your slicer (custom g-code). 
 # You can Modify these to your liking.
