--- a/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
+++ b/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
@@ -3,7 +3,8 @@
 # In case of another board / printer, you can overwrite this file 
 # with your own config.
 
-# The first thing you'll need to do is go through this file an comment out / uncomment the files you need.
+# The first thing you'll need to do is go through this file and comment out / uncomment 
+# the files and/or settings you need.
 # You'll be able to print just fine with this config as it is, but it is recommended
 # that you follow these steps to properly calibrate your printer:
 # 0) Sanity check and PID Tuning: https://www.klipper3d.org/Config_checks.html
