Add additional guidance to stepper_y endstop pos

--- a/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
+++ b/src/modules/ratrig/filesystem/home/pi/klipper_config/printer.cfg
@@ -29,13 +29,17 @@ z_offset: 0.0 # Adjust this to fit your setup
 # Physical endstops
 [include v-core-3/physical-endstops.cfg]
 [safe_z_home]
-home_xy_position: 150,150 # 300
-#home_xy_position: 200,200 # 400
-#home_xy_position: 250,250 # 500
+home_xy_position: 150,150 # 300mm printer
+#home_xy_position: 200,200 # 400mm printer
+#home_xy_position: 250,250 # 500mm printer
 
 # Endstop position
+# Adjust this to your setup
+# Note: might need fine tuning.
 [stepper_y]
-position_endstop: 300 # Adjust this to your setup
+position_endstop: 300  # 300mm printer
+#position_endstop: 400 # 400mm printer
+#position_endstop: 500 # 500mm printer
 
 # Sensorless homing (Beware: this requires tinkering and does not work if your x/y stepper drivers
 # have clipped DIAG pins).
