--- a/src/modules/mainsail/filesystem/root/etc/nginx/conf.d/upstreams.conf
+++ b/src/modules/mainsail/filesystem/root/etc/nginx/conf.d/upstreams.conf
@@ -3,7 +3,22 @@ upstream apiserver {
     server 127.0.0.1:7125;
 }
 
-upstream mjpgstreamer {
+upstream mjpgstreamer1 {
     ip_hash;
     server 127.0.0.1:8080;
+}
+
+upstream mjpgstreamer2 {
+    ip_hash;
+    server 127.0.0.1:8081;
+}
+
+upstream mjpgstreamer3 {
+    ip_hash;
+    server 127.0.0.1:8082;
+}
+
+upstream mjpgstreamer4 {
+    ip_hash;
+    server 127.0.0.1:8083;
 }
