--- a/src/modules/mjpgstreamer/filesystem/root/etc/systemd/system/webcamd.service
+++ b/src/modules/mjpgstreamer/filesystem/root/etc/systemd/system/webcamd.service
@@ -1,6 +1,6 @@
 
 [Unit]
-Description=the MainsailOS webcam daemon with the user specified config
+Description=the MainsailOS webcam daemon (based on OctoPi) with the user specified config
 
 [Service]
 WorkingDirectory=/root/bin
