--- a/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -3,9 +3,9 @@ host: 0.0.0.0
 port: 7125
 enable_debug_logging: False
 config_path: ~/klipper_config
+log_path: ~/klipper_logs
 
 [authorization]
-enabled: True
 cors_domains:
     https://my.mainsail.xyz
     http://my.mainsail.xyz
