--- a/src/modules/mainsail/filesystem/home/pi/klipper_config/mainsail.cfg
+++ b/src/modules/mainsail/filesystem/home/pi/klipper_config/mainsail.cfg
@@ -10,8 +10,6 @@ description: Cancel the actual running print
 rename_existing: CANCEL_PRINT_BASE
 gcode:
     TURN_OFF_HEATERS
-    CLEAR_PAUSE
-    SDCARD_RESET_FILE
     CANCEL_PRINT_BASE
 
 [gcode_macro PAUSE]
@@ -34,12 +32,10 @@ gcode:
     {% else %}
         {% set z_safe = max_z - act_z %}
     {% endif %}
-    {%set min_extrude_temp = printer.configfile.settings["extruder"]["min_extrude_temp"]|int %}
-    {%set act_extrude_temp = printer.extruder.temperature|int %}
     ##### end of definitions #####
     PAUSE_BASE
     G91
-    {% if act_extrude_temp > min_extrude_temp %}
+    {% if printer.extruder.can_extrude|lower == 'true' %}
       G1 E-{E} F2100
     {% else %}
       {action_respond_info("Extruder not hot enough")}
@@ -58,8 +54,6 @@ rename_existing: RESUME_BASE
 gcode:
     ##### read E from pause macro #####
     {% set E = printer["gcode_macro PAUSE"].extrude|float %}
-    {%set min_extrude_temp = printer.configfile.settings["extruder"]["min_extrude_temp"]|int %}
-    {%set act_extrude_temp = printer.extruder.temperature|int %}
     #### get VELOCITY parameter if specified ####
     {% if 'VELOCITY' in params|upper %}
       {% set get_params = ('VELOCITY=' + params.VELOCITY)  %}
@@ -67,7 +61,7 @@ gcode:
       {% set get_params = "" %}
     {% endif %}
     ##### end of definitions #####
-    {% if act_extrude_temp > min_extrude_temp %}
+    {% if printer.extruder.can_extrude|lower == 'true' %}
       G91
       G1 E{E} F2100
     {% else %}
