--- a/src/config
+++ b/src/config
@@ -1,5 +1,10 @@
+#!/usr/bin/env bash
+# Shebang for better detection of file type
+
 export DIST_NAME=MainSailOS
 export DIST_VERSION=0.4.0
 export BASE_IMAGE_ENLARGEROOT=2000
 export BASE_IMAGE_RESIZEROOT=500
 export MODULES="base(network,raspicam,klipper,moonraker,mainsail,mjpgstreamer,password-for-sudo)"
+# Make Zip according to mainsail PR #303 
+export BASE_RELEASE_COMPRESS=yes
