Fixed Typos, Added Want in klipper.service Updated CHANGELOG
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/moonraker/filesystem/root/etc/systemd/system/moonraker.service
+++ b/src/modules/moonraker/filesystem/root/etc/systemd/system/moonraker.service
@@ -3,8 +3,8 @@
 [Unit]
 Description=Moonraker provides Web API for klipper
 Documentation=https://moonraker.readthedocs.io/en/latest/
-After=network.target,klipper.service
-Requires=nginx
+After=network.target klipper.service
+Requires=nginx.service
 
 [Install]
 WantedBy=multi-user.target
