--- a/src/modules/klipper/filesystem/root/etc/systemd/system/klipper.service
+++ b/src/modules/klipper/filesystem/root/etc/systemd/system/klipper.service
@@ -5,6 +5,7 @@ Description=Starts Klipper and provides klippy Unix Domain Socket API
 Documentation=https://www.klipper3d.org/
 After=network.target
 Before=moonraker.service
+Wants=udev.target
 
 [Install]
 Alias=klippy
