Support for multiple boards and printers

--- a/src/modules/klipper_moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/klipper_moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -29,24 +29,17 @@ trusted_clients:
 # this enables moonraker's update manager
 [update_manager]
 
-# [update_manager client mainsail]
-# type: web
-# repo: meteyou/mainsail
-# path: ~/mainsail
-
-# [update_manager client ratrig-theme]
-# type: git_repo
-# path: /home/pi/klipper_config/.theme
-# origin: https://github.com/Rat-Rig/mainsail-theme.git
-
-[update_manager client vcore3]
+[update_manager client v-coreos]
 type: git_repo
-path: /home/pi/klipper_config/v-core-3
-origin: https://github.com/Rat-Rig/v-core-3-klipper-config.git
-install_script: /home/pi/klipper_config/v-core-3/scripts/vcore-install.sh
+path: /home/pi/klipper_config/config
+origin: https://github.com/Rat-OS/ratos-configuration.git
+install_script: /home/pi/klipper_config/config/scripts/ratos-install.sh
 
 # enables fluidd updates
 [update_manager client fluidd]
 type: web
 repo: cadriel/fluidd
 path: ~/fluidd
+persistent_files:
+    config.json
+    logo_v-coreos.svg
