moonraker: update moonraker.conf to new update_manager style
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -29,7 +29,7 @@ trusted_clients:
 # this enables moonraker's update manager
 [update_manager]
 
-[update_manager client mainsail]
+[update_manager mainsail]
 type: web
 repo: meteyou/mainsail
 path: ~/mainsail
