--- a/src/modules/moonraker/config
+++ b/src/modules/moonraker/config
@@ -3,6 +3,7 @@
 [ -n "$MOONRAKER_REPO_SHIP" ] || MOONRAKER_REPO_SHIP=https://github.com/Arksine/moonraker.git
 [ -n "$MOONRAKER_REPO_BRANCH" ] || MOONRAKER_REPO_BRANCH=master
 [ -n "$MOONRAKER_DEPS" ] || MOONRAKER_DEPS="wget git gpiod \
-python3-virtualenv python3-dev nginx libopenjp2-7 python3-libgpiod \
-liblmdb0 rsync zlib1g-dev"
+python3-virtualenv python3-dev libopenjp2-7 python3-libgpiod \
+curl libcurl4-openssl-dev libssl-dev liblmdb0 \
+libsodium-dev zlib1g-dev"
 [ -n "$MOONRAKER_PYENV_REQ" ] || MOONRAKER_PYENV_REQ=scripts/moonraker-requirements.txt
