--- a/src/modules/preupdater/config
+++ b/src/modules/preupdater/config
@@ -8,4 +8,5 @@ avrdude gcc-avr binutils-avr avr-libc \
 stm32flash dfu-util libnewlib-arm-none-eabi \
 gcc-arm-none-eabi binutils-arm-none-eabi libusb-1.0 \
 nginx python3-virtualenv python3-dev libopenjp2-7 python3-libgpiod \
-liblmdb0 rsync zlib1g-dev cmake cmake-data"
+liblmdb0 rsync zlib1g-dev cmake cmake-data curl \
+libcurl4-openssl-dev libssl-dev liblmdb0 libsodium-dev"
