--- a/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -31,20 +31,21 @@ trusted_clients:
 # this enables moonraker's update manager
 [update_manager]
 
-[update_manager client v-coreos]
+[update_manager client RatOS]
 type: git_repo
 path: /home/pi/klipper_config/config
 origin: https://github.com/Rat-OS/ratos-configuration.git
 install_script: /home/pi/klipper_config/config/scripts/ratos-install.sh
 
-# enables fluidd updates
-[update_manager client fluidd]
-type: web
-repo: cadriel/fluidd
-path: ~/fluidd
-persistent_files:
-    config.json
-    logo_v-coreos.svg  [update_manager mainsail]
+[update_manager mainsail]
 type: web
 repo: meteyou/mainsail
 path: ~/mainsail
+
+[update_manager KlipperScreen]
+type: git_repo
+path: ~/KlipperScreen
+origin: https://github.com/jordanruthe/KlipperScreen.git
+env: ~/.KlipperScreen-env/bin/python
+requirements: scripts/KlipperScreen-requirements.txt
+install_script: scripts/KlipperScreen-install.sh
