--- a/src/config
+++ b/src/config
@@ -1,6 +1,6 @@
-export DIST_NAME=V-CoreOS
+export DIST_NAME=RatOS
 export DIST_VERSION=1.0.0
 export BASE_IMAGE_ENLARGEROOT=4000
-export MODULES="base(network,raspicam,,klipper,is_req_preinstall,moonraker,mainsail,mjpgstreamer,serialcomm,rpi_muc,ratrig,password-for-sudo)"
+export MODULES="base(network,raspicam,klipper,is_req_preinstall,moonraker,mainsail,mjpgstreamer,serialcomm,rpi_mcu,ratos,klipperscreen,password-for-sudo)"
 export BASE_IMAGE_RESIZEROOT=600
 export BASE_RELEASE_COMPRESS=yes
