Fix RatOS casing and add theme to moonraker

--- a/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -31,10 +31,16 @@ trusted_clients:
 # this enables moonraker's update manager
 [update_manager]
 
+[update_manager client RatOSTheme]
+type: git_repo
+path: /home/pi/klipper_config/.theme
+origin: https://github.com/Rat-OS/RatOS-theme.git
+is_system_service: False
+
 [update_manager client RatOS]
 type: git_repo
 path: /home/pi/klipper_config/config
-origin: https://github.com/Rat-OS/ratos-configuration.git
+origin: https://github.com/Rat-OS/RatOS-configuration.git
 install_script: /home/pi/klipper_config/config/scripts/ratos-install.sh
 
 [update_manager mainsail]
