--- a/src/modules/moonraker/config
+++ b/src/modules/moonraker/config
@@ -4,6 +4,6 @@
 [ -n "$MOONRAKER_REPO_BRANCH" ] || MOONRAKER_REPO_BRANCH=master
 [ -n "$MOONRAKER_DEPS" ] || MOONRAKER_DEPS="wget git gpiod \
 python3-virtualenv python3-dev libopenjp2-7 python3-libgpiod \
-curl libcurl4-openssl-dev libssl-dev liblmdb0 \
-libsodium-dev zlib1g-dev"
+curl libcurl4-openssl-dev libssl-dev liblmdb-dev \
+libsodium-dev zlib1g-dev libjpeg-dev"
 [ -n "$MOONRAKER_PYENV_REQ" ] || MOONRAKER_PYENV_REQ=scripts/moonraker-requirements.txt
