Raspian Buster Image Build * Added module busterpatch to prevent builderrors since raspbian latest is bullseye * This Module also adds latest buster updates and corrects apt cache database * Patched klipper Module to new URL ( Klipper3d/klipper.git ) * To ensure correct Image is used fixed .sha1 File added. * Updated Makefile accordingly
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/config
+++ b/src/config
@@ -4,6 +4,6 @@
 export DIST_NAME=MainSailOS
 export DIST_VERSION=0.5.0
 export BASE_IMAGE_ENLARGEROOT=2500
-export MODULES="base(network,raspicam,klipper,is_req_preinstall,moonraker,mainsail,mjpgstreamer,serialcomm,password-for-sudo)" 
+export MODULES="base,busterpatch(network,raspicam,klipper,is_req_preinstall,moonraker,mainsail,mjpgstreamer,serialcomm,password-for-sudo)" 
 export BASE_RELEASE_COMPRESS=yes
 export BASE_IMAGE_RESIZEROOT=600
