--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 src/config.local
 src/custompios_path
-src/image/*
+src/image/*.zip
 src/image-variants/*.zip
 **/key.json
 src/nightly_build_scripts/index.html
