Naming Convention: Replaced raspbian with Raspberry Pi OS * Cleanup: Removed Requirements for downloading CustomPIOS and Image in README.md * Added Credit to jottr for mentioning naming convention. * Updated according to naming convention: git actions, emulation/README.md, Makefile and README.md
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/.github/workflows/ReleaseRaspiOS.yml
+++ b/.github/workflows/ReleaseRaspiOS.yml
@@ -24,7 +24,7 @@ jobs:
           path: repository
           submodules: true
 
-      - name: Download Raspbian Source Image
+      - name: Download Raspberry Pi OS Source Image
         run: aria2c -d repository/src/image/ --seed-time=0 https://downloads.raspberrypi.org/raspios_lite_armhf/images/raspios_lite_armhf-2021-03-25/2021-03-04-raspios-buster-armhf-lite.zip.torrent
       
       - name: Update CustomPiOS Paths
