--- a/.github/workflows/ReleaseRaspiOS.yml
+++ b/.github/workflows/ReleaseRaspiOS.yml
@@ -1,4 +1,4 @@
-name: Build and Release MainsailOS - RapsiOS
+name: Build and Release MainsailOS - Raspberry Pi OS buster
 on:
   release:
     types: [ published ]
