--- a/.github/workflows/ReleaseRaspiOS.yml
+++ b/.github/workflows/ReleaseRaspiOS.yml
@@ -1,4 +1,4 @@
-name: Build and Release MainsailOS - RapsiOS
+name: Build and Release MainsailOS - Raspberry Pi OS buster
 on:
   release:
     types: [ published ]
@@ -24,8 +24,8 @@ jobs:
           path: repository
           submodules: true
 
-      - name: Download Raspbian Source Image
-        run: aria2c -d repository/src/image/ --seed-time=0 https://downloads.raspberrypi.org/raspios_lite_armhf_latest.torrent
+      - name: Download Raspberry Pi OS Source Image
+        run: aria2c -d repository/src/image/ --seed-time=0 https://downloads.raspberrypi.org/raspios_lite_armhf/images/raspios_lite_armhf-2021-03-25/2021-03-04-raspios-buster-armhf-lite.zip.torrent
       
       - name: Update CustomPiOS Paths
         run: cd repository/src && ../../CustomPiOS/src/update-custompios-paths
