--- a/src/config
+++ b/src/config
@@ -3,7 +3,7 @@
 
 export DIST_NAME=RatOS
 export DIST_VERSION=1.0.0
-export BASE_IMAGE_ENLARGEROOT=4000
-export MODULES="base(network,raspicam,klipper,is_req_preinstall,moonraker,mainsail,mjpgstreamer,serialcomm,rpi_mcu,ratos,klipperscreen,password-for-sudo)"
+export BASE_IMAGE_ENLARGEROOT=2500
+export MODULES="base,busterpatch(network,raspicam,klipper,is_req_preinstall,moonraker,mainsail,mjpgstreamer,serialcomm,rpi_mcu,ratos,klipperscreen,password-for-sudo)"
 export BASE_IMAGE_RESIZEROOT=600
 export BASE_RELEASE_COMPRESS=yes
