--- a/src/config
+++ b/src/config
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 # Shebang for better detection of file type
 
-export DIST_NAME=MainSailOS
+export DIST_NAME=MainsailOS
 export DIST_VERSION=0.5.0
 export BASE_IMAGE_ENLARGEROOT=2500
 export MODULES="base,busterpatch(network,raspicam,klipper,is_req_preinstall,moonraker,mainsail,mjpgstreamer,serialcomm,password-for-sudo)" 
