--- a/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -2,8 +2,12 @@
 host: 0.0.0.0
 port: 7125
 enable_debug_logging: False
+
+[file_manager]
 config_path: ~/klipper_config
 log_path: ~/klipper_logs
+queue_gcode_uploads: True
+enable_object_processing: False
 
 [authorization]
 cors_domains:
@@ -25,6 +29,9 @@ trusted_clients:
 
 # enables moonraker to track and store print history.
 [history]
+
+# enables moonraker to queue jobs
+[job_queue]
 
 # this enables moonraker's update manager
 [update_manager]
