--- a/.github/workflows/ReleaseRaspiOS.yml
+++ b/.github/workflows/ReleaseRaspiOS.yml
@@ -1,7 +1,7 @@
-name: Build and Release MainsailOS - Raspberry Pi OS buster
+name: Build and Release RatOS - Raspberry Pi OS buster
 on:
   release:
-    types: [ published ]
+    types: [published]
 
 jobs:
   raspiosbuild:
@@ -14,10 +14,10 @@ jobs:
       - name: Checkout CustomPiOS
         uses: actions/checkout@v2
         with:
-          repository: 'guysoft/CustomPiOS'
+          repository: "guysoft/CustomPiOS"
           path: CustomPiOS
-      
-      - name: Checkout MainsailOS Project
+
+      - name: Checkout RatOS Project
         uses: actions/checkout@v2
         with:
           repository: ${{ github.repository }}
@@ -26,7 +26,7 @@ jobs:
 
       - name: Download Raspberry Pi OS Source Image
         run: aria2c -d repository/src/image/ --seed-time=0 https://downloads.raspberrypi.org/raspios_lite_armhf/images/raspios_lite_armhf-2021-03-25/2021-03-04-raspios-buster-armhf-lite.zip.torrent
-      
+
       - name: Update CustomPiOS Paths
         run: cd repository/src && ../../CustomPiOS/src/update-custompios-paths
 
@@ -34,15 +34,15 @@ jobs:
         run: sudo modprobe loop && cd repository/src && sudo bash -x ./build_dist
 
       - name: Copy output image
-        run: cp ${{ github.workspace }}/repository/src/workspace/*-raspios-*-lite.img mainsailos-raspios-lite-latest.img
-      
+        run: cp ${{ github.workspace }}/repository/src/workspace/*-raspios-*-lite.img RatOS-${{ github.event.release.tag_name }}.img
+
       - name: Compress the image
-        run: zip mainsailos-raspios-lite-latest.zip mainsailos-raspios-lite-latest.img
+        run: zip RatOS-${{ github.event.release.tag_name }}.zip RatOS-${{ github.event.release.tag_name }}.img
 
       - uses: actions/upload-artifact@v1
         with:
-          name: mainsailos-raspios-lite-latest.zip
-          path: mainsailos-raspios-lite-latest.zip
+          name: RatOS-${{ github.event.release.tag_name }}.zip
+          path: RatOS-${{ github.event.release.tag_name }}.zip
 
       - name: Upload RaspiOS Asset
         uses: actions/upload-release-asset@v1
@@ -50,6 +50,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: mainsailos-raspios-lite-latest.zip
-          asset_name: mainsailos-rpi-lite-${{ github.event.release.tag_name }}.zip
+          asset_path: ratos-raspios-lite-latest.zip
+          asset_name: RatOS-${{ github.event.release.tag_name }}.zip
           asset_content_type: application/zip
