--- a/.github/workflows/BuildRaspiOS.yml
+++ b/.github/workflows/BuildRaspiOS.yml
@@ -5,8 +5,10 @@ on:
       - "**"
     tags-ignore:
       - "**"
+    paths: [src/**]
   pull_request:
     types: [opened, edited]
+    paths: [src/**]
 
 jobs:
   raspiosbuild:
