Workflows: use correct dir for compiling docs

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: 14.x
           cache: yarn
       - name: Build website
-        working-directory: website
+        working-directory: site
         run: |
           yarn install --frozen-lockfile
           yarn build
