--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: 14.x
           cache: yarn
+          cache-dependency-path: site/yarn.lock
       - name: Build website
         working-directory: site
         run: |
