--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [master]
     paths: [site/**]
+  workflow_dispatch:
 
-jobs:
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
@@ -14,8 +14,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14.x
-          cache: yarn
-          cache-dependency-path: site/yarn.lock
       - name: Build website
         working-directory: site
         run: |
