--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-src/config.local
-src/custompios_path
-src/image/*.zip
-src/image-variants/*.zip
-**/key.json
-src/nightly_build_scripts/index.html
-src/nightly_build_scripts/node_modules
-src/workspace-*
+# Ignore workspace
 src/workspace
+
+# Ignore src/image
+src/image/**
+
+# Ignore build.log
 src/build.log
-src/vagrant/*.log
-src/vagrant/.vagrant
-.vscode
-.idea
-build.log
-.DS_Store
