Workflow: change build event to release creation

--- a/.github/workflows/ReleaseRaspiOS.yml
+++ b/.github/workflows/ReleaseRaspiOS.yml
@@ -1,55 +1,55 @@
 name: Build and Release RatOS - Raspberry Pi OS buster
 on:
-  release:
-    types: [published]
+    release:
+        types: [created]
 
 jobs:
-  raspiosbuild:
-    runs-on: ubuntu-latest
+    raspiosbuild:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Install Dependencies
-        run: sudo apt install coreutils p7zip-full qemu-user-static zip
+        steps:
+            - name: Install Dependencies
+              run: sudo apt install coreutils p7zip-full qemu-user-static zip
 
-      - name: Checkout CustomPiOS
-        uses: actions/checkout@v2
-        with:
-          repository: "guysoft/CustomPiOS"
-          path: CustomPiOS
+            - name: Checkout CustomPiOS
+              uses: actions/checkout@v2
+              with:
+                  repository: 'guysoft/CustomPiOS'
+                  path: CustomPiOS
 
-      - name: Checkout RatOS Project
-        uses: actions/checkout@v2
-        with:
-          repository: ${{ github.repository }}
-          path: repository
-          submodules: true
+            - name: Checkout RatOS Project
+              uses: actions/checkout@v2
+              with:
+                  repository: ${{ github.repository }}
+                  path: repository
+                  submodules: true
 
-      - name: Download Raspberry Pi OS Source Image
-        run: aria2c -d repository/src/image/ --seed-time=0 https://downloads.raspberrypi.org/raspios_lite_armhf/images/raspios_lite_armhf-2021-03-25/2021-03-04-raspios-buster-armhf-lite.zip.torrent
+            - name: Download Raspberry Pi OS Source Image
+              run: aria2c -d repository/src/image/ --seed-time=0 https://downloads.raspberrypi.org/raspios_lite_armhf/images/raspios_lite_armhf-2021-03-25/2021-03-04-raspios-buster-armhf-lite.zip.torrent
 
-      - name: Update CustomPiOS Paths
-        run: cd repository/src && ../../CustomPiOS/src/update-custompios-paths
+            - name: Update CustomPiOS Paths
+              run: cd repository/src && ../../CustomPiOS/src/update-custompios-paths
 
-      - name: Build Image
-        run: sudo modprobe loop && cd repository/src && sudo bash -x ./build_dist
+            - name: Build Image
+              run: sudo modprobe loop && cd repository/src && sudo bash -x ./build_dist
 
-      - name: Copy output image
-        run: cp ${{ github.workspace }}/repository/src/workspace/*-raspios-*-lite.img RatOS-${{ github.event.release.tag_name }}.img
+            - name: Copy output image
+              run: cp ${{ github.workspace }}/repository/src/workspace/*-raspios-*-lite.img RatOS-${{ github.event.release.tag_name }}.img
 
-      - name: Compress the image
-        run: zip RatOS-${{ github.event.release.tag_name }}.zip RatOS-${{ github.event.release.tag_name }}.img
+            - name: Compress the image
+              run: zip RatOS-${{ github.event.release.tag_name }}.zip RatOS-${{ github.event.release.tag_name }}.img
 
-      - uses: actions/upload-artifact@v1
-        with:
-          name: RatOS-${{ github.event.release.tag_name }}.zip
-          path: RatOS-${{ github.event.release.tag_name }}.zip
+            - uses: actions/upload-artifact@v1
+              with:
+                  name: RatOS-${{ github.event.release.tag_name }}.zip
+                  path: RatOS-${{ github.event.release.tag_name }}.zip
 
-      - name: Upload RaspiOS Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ratos-raspios-lite-latest.zip
-          asset_name: RatOS-${{ github.event.release.tag_name }}.zip
-          asset_content_type: application/zip
+            - name: Upload RaspiOS Asset
+              uses: actions/upload-release-asset@v1
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                  upload_url: ${{ github.event.release.upload_url }}
+                  asset_path: ratos-raspios-lite-latest.zip
+                  asset_name: RatOS-${{ github.event.release.tag_name }}.zip
+                  asset_content_type: application/zip
