--- a/.github/workflows/BuildRaspiOS.yml
+++ b/.github/workflows/BuildRaspiOS.yml
@@ -2,13 +2,19 @@ name: Build RatOS - Raspberry Pi OS buster
 on:
   push:
     branches:
-      - "**"
+      - '**'
+    paths:
+    - 'src/**'
+    - 'emulation/**'
+    - '.github/workflows/BuildRaspiOS.yml'
     tags-ignore:
       - "**"
-    paths: [src/**]
   pull_request:
-    types: [opened, edited]
-    paths: [src/**]
+    types: [ opened, edited ]
+    paths:
+    - 'src/**'
+    - 'emulation/**'
+    - '.github/workflows/BuildRaspiOS.yml'
   workflow_dispatch:
 
 jobs:
@@ -17,7 +23,7 @@ jobs:
 
     steps:
       - name: Install Dependencies
-        run: sudo apt update; sudo apt install coreutils p7zip-full qemu-user-static zip
+        run: sudo apt update; sudo apt install --yes coreutils p7zip-full qemu-user-static zip
 
       - name: Checkout CustomPiOS
         uses: actions/checkout@v2
@@ -33,7 +39,12 @@ jobs:
           submodules: true
 
       - name: Download Raspberry Pi OS Source Image
-        run: aria2c -d repository/src/image/ --seed-time=0 https://downloads.raspberrypi.org/raspios_oldstable_lite_armhf/images/raspios_oldstable_lite_armhf-2021-12-02/2021-12-02-raspios-buster-armhf-lite.zip.torrent
+        run: aria2c -d repository/src/image/ --seed-time=0 https://downloads.raspberrypi.org/raspios_oldstable_lite_armhf_latest.torrent
+
+      - name: Comparing Checksums
+        run: |
+          cd repository/src/image
+          curl -JL https://downloads.raspberrypi.org/raspios_oldstable_lite_armhf_latest.sha256 | awk '{print $1"  "$2}' | sha256sum -c
 
       - name: Update CustomPiOS Paths
         run: cd repository/src && ../../CustomPiOS/src/update-custompios-paths
@@ -47,7 +58,7 @@ jobs:
       - name: Compress the image
         run: zip RatOS-latest.zip RatOS-latest.img
 
-      - uses: actions/upload-artifact@v1
+      - uses: actions/upload-artifact@v2
         with:
           name: RatOS-latest.zip
           path: RatOS-latest.zip
