--- a/src/config
+++ b/src/config
@@ -4,6 +4,6 @@
 export DIST_NAME=RatOS
 export DIST_VERSION=1.1.0
 export BASE_IMAGE_ENLARGEROOT=4600
-export MODULES="base,pkgupgrade(network,raspicam,klipper,is_req_preinstall,moonraker,mainsail,mjpgstreamer,serialcomm,ratos,rpi_mcu,klipperscreen,password-for-sudo)"
+export MODULES="base,pkgupgrade(network,piconfig,raspicam,klipper,is_req_preinstall,moonraker,mainsail,mjpgstreamer,serialcomm,ratos,rpi_mcu,klipperscreen,password-for-sudo)"
 export BASE_IMAGE_RESIZEROOT=600
 export BASE_RELEASE_COMPRESS=yes
