chore(workflows): update pull_request trigger
add reopend and synchronize

--- a/.github/workflows/BuildRaspiOS.yml
+++ b/.github/workflows/BuildRaspiOS.yml
@@ -10,7 +10,7 @@ on:
     tags-ignore:
       - "**"
   pull_request:
-    types: [ opened, edited ]
+    types: [ opened, edited, reopened, synchronize ]
     paths:
     - 'src/**'
     - 'emulation/**'
